--- a/contact.html
+++ b/contact.html
@@ -105,10 +105,10 @@
                         </div>
                         <div class="col-md-12 select-outline">
                            <select class="custom-select ">
-                              <option selected>Select Subject*</option>
-                              <option value="1">a</option>
-                              <option value="2">b</option>
-                              <option value="3">c</option>
+                              <option selected>Select your field</option>
+                              <option value="1">student</option>
+                              <option value="2">Faculty</option>
+                              <option value="3">others</option>
                            </select>
                         </div>
                         <div class="col-md-12">
