--- a/Content.html
+++ b/Content.html
@@ -39,7 +39,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo1.png" alt="#" /></a>
+                           <a href="index2.html"><img src="images/logo1.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -52,7 +52,7 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item">
-                              <a class="nav-link" href="index.html">Home</a>
+                              <a class="nav-link" href="index2.html">Home</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about.html">About</a>
