--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo1.png" alt="#" /></a>
+                           <a href="index2.html"><img src="images/logo1.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -54,7 +54,7 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item">
-                              <a class="nav-link" href="index.html">Home</a>
+                              <a class="nav-link" href="index2.html">Home</a>
                            </li>
                            <li class="nav-item active">
                               <a class="nav-link" href="about.html">About</a>
@@ -126,28 +126,26 @@
                         <div class="col-md-12">
                            <div class="infoma">
                               <h3>Feedback</h3>
-                              <form class="form_subscri">
+                              <form action="submit_feedback.php" method="POST" class="form_subscri">
                                  <div class="row">
-                                    <div class="col-md-12">
-                                    </div>
-                                    <div class="col-md-4">
-                                       <input class="newsl" placeholder="Enter your email" type="text" name="Enter your email">
-                                    </div>
-                                    <div class="col-md-4">
-                                       <input class="newsl" placeholder="Enter your message" type="text" name="Enter your email">
-                                    </div>
-                                    <div class="col-md-4">
-                                       <button class="subsci_btn">send</button>
-                                    </div>
+                                     <div class="col-md-4">
+                                         <input class="newsl" placeholder="Enter your email" type="email" name="email" required>
+                                     </div>
+                                     <div class="col-md-4">
+                                         <input class="newsl" placeholder="Enter your message" type="text" name="message" required>
+                                     </div>
+                                     <div class="col-md-4">
+                                         <button type="submit" class="subsci_btn">Send</button>
+                                     </div>
                                  </div>
-                              </form>
+                             </form>
                            </div>
                         </div>
                         <div class="col-md-9">
                            <div class="infoma">
                               <h3>For faster use</h3>
                               <ul class="fullink">
-                                 <li><a href="index.html">Home</a></li>
+                                 <li><a href="index2.html">Home</a></li>
                                  <li><a href="about.html">About</a></li>
                                  <li><a href="Content.html">Content</a></li>
                                  <li><a href="Notes.html">Notes</a></li>
