--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo1.png" alt="#" /></a>
+                           <a href="index2.html"><img src="images/logo1.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -54,7 +54,7 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item">
-                              <a class="nav-link" href="index.html">Home</a>
+                              <a class="nav-link" href="index2.html">Home</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about.html">About</a>
@@ -85,51 +85,55 @@
       <!-- contact -->
       <div class="contact">
          <div class="container">
-            <div class="row ">
+            <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
                      <h2>Contact Us</h2>
                   </div>
                </div>
+               <!-- Contact Form Section -->
                <div class="col-md-6">
-                  <form id="request" class="main_form">
+                  <form action="submit_contact.php" method="POST" id="request" class="main_form">
                      <div class="row">
-                        <div class="col-md-6 ">
-                           <input class="contactus" placeholder="Name*" type="type" name=" Name"> 
+                        <div class="col-md-6">
+                           <input class="contactus" placeholder="Name*" type="text" name="name" required> 
                         </div>
                         <div class="col-md-6">
-                           <input class="contactus" placeholder="Phone Number*" type="phonenumber" name="Phone Number">                          
+                           <input class="contactus" placeholder="Phone Number*" type="text" name="phone" required>                          
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Email*" type="type" name="Email">                          
+                           <input class="contactus" placeholder="Email*" type="email" name="email" required>                          
                         </div>
                         <div class="col-md-12 select-outline">
-                           <select class="custom-select ">
-                              <option selected>Select your field</option>
-                              <option value="1">student</option>
-                              <option value="2">Faculty</option>
-                              <option value="3">others</option>
+                           <select class="custom-select" name="field" required>
+                              <option value="" disabled selected>Select your field</option>
+                              <option value="student">Student</option>
+                              <option value="faculty">Faculty</option>
+                              <option value="others">Others</option>
                            </select>
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name"></textarea>
+                           <textarea class="textarea" placeholder="Message" name="message" required></textarea>
                         </div>
                         <div class="col-md-12">
-                           <button class="send_btn">Send</button>
+                           <button type="submit" class="send_btn">Send</button>
                         </div>
                      </div>
                   </form>
                </div>
+               <!-- Google Map Section -->
                <div class="col-md-6">
                   <div class="map_main">
                      <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31266.16768868691!2d75.56973659413562!3d11.604021259251416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba68466c31748bf%3A0x3cc92cfc67ca7419!2sVatakara%2C%20Kerala%2C%20India!5e0!3m2!1sen!2sus!4v1739554441898!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.82459241409!2d75.64826937402822!3d11.564429144166974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba6865b9d9a0f0b%3A0x358dba59247ac6b5!2sCollege%20of%20Engineering%20Vadakara!5e0!3m2!1sen!2sin!4v1743225349120!5m2!1sen!2sin" 
+                           width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
+      
       <!-- contact -->
       <!--  footer -->
       <footer>
@@ -173,7 +177,7 @@
                            <div class="infoma">
                               <h3>For faster use</h3>
                               <ul class="fullink">
-                                 <li><a href="index.html">Home</a></li>
+                                 <li><a href="index2.html">Home</a></li>
                                  <li><a href="about.html">About</a></li>
                                  <li><a href="Content.html">Content</a></li>
                                  <li><a href="Note.html">Notes</a></li>
